--- a/resources/css/awpcpstyle.css
+++ b/resources/css/awpcpstyle.css
@@ -998,15 +998,21 @@ p.ad_status_msg {
     margin-left: 10px;
 }
 
-.awpcp-region-selector {
+.awpcp-multiple-region-selector .awpcp-region-selector,
+#classiwrapper .awpcp-region-selector {
     background: #EEE;
     padding: 4px 8px;
     margin-bottom: 5px;
 }
-.awpcp-region-selector:last-of-type {
+.awpcp-multiple-region-selector .awpcp-region-selector:last-of-type,
+#classiwrapper .awpcp-region-selector:last-of-type {
     margin-bottom: 0;
 }
 
+.awpcp-region-selector .awpcp-region-selector-partial,
+#classiwrapper .awpcp-region-selector .awpcp-region-selector-partial {
+    margin-bottom: 2px;
+}
 .awpcp-region-selector .awpcp-region-selector-partial label {
     margin-right: 5px;
 }
