--- a/resources/css/awpcpstyle.css
+++ b/resources/css/awpcpstyle.css
@@ -671,6 +671,11 @@ margin-top:10px;}
 	padding:10px;
 }
 
+.awpcp-subtitle {
+    font-weight: bold;
+    margin-bottom: 2px;
+}
+
 #showawpcpadpage .awpcp-ad-primary-image,
 .awpcp-ad-primary-image {
 	text-align: center;
@@ -736,6 +741,10 @@ padding:0;
 
 
 #showawpcpadpage p {
+}
+
+#showawpcpadpage label {
+    font-weight: bold;
 }
 
 
