Update Multiple Region Selector CSS style (#645)

--- a/resources/css/awpcpstyle.css
+++ b/resources/css/awpcpstyle.css
@@ -1144,58 +1144,6 @@ p.ad_status_msg {
   background: none repeat scroll 0 0 #A2C9DB;
   padding: 10px;
 }
-/* Multiple Region Selector Styles */
-.awpcp-multiple-region-selector .add-region,
-.awpcp-multiple-region-selector .remove-region {
-  font-size: 0.8em;
-}
-.awpcp-multiple-region-selector .add-region {
-  margin-left: 10px;
-}
-.awpcp-multiple-region-selector .awpcp-region-selector,
-#classiwrapper .awpcp-region-selector {
-  background: #EEE;
-  padding: 4px 8px;
-  margin-bottom: 5px;
-}
-.awpcp-multiple-region-selector .awpcp-region-selector:last-of-type,
-#classiwrapper .awpcp-region-selector:last-of-type {
-  margin-bottom: 0;
-}
-.awpcp-region-selector .awpcp-region-selector-partial,
-#classiwrapper .awpcp-region-selector .awpcp-region-selector-partial {
-  margin-bottom: 2px;
-}
-.awpcp-region-selector .awpcp-region-selector-partial label {
-  margin-right: 5px;
-}
-.awpcp-region-selector .awpcp-region-selector-partial .loading-message {
-  color: #555;
-  font-size: 0.9em;
-  font-style: italic;
-}
-/* Region Control styles */
-#awpcp-region-control-selector {
-  background: #EEE;
-  margin: 0 0 10px;
-  padding: 10px;
-}
-#awpcp-region-control-selector .legend,
-#awpcp-region-control-selector .help-text {
-  margin-bottom: 10px;
-}
-#awpcp-region-control-selector .awpcp-form-spacer {
-  margin-bottom: 2px;
-}
-#awpcp-region-control-selector .awpcp-form-spacer .label {
-  font-weight: bold;
-}
-#awpcp-region-control-selector .submit {
-  margin-top: 20px;
-}
-.awpcp-region-control-region-fields .hidden {
-  display: none;
-}
 /* Extra Fields styles */
 .awpcp-extra-field-category-root,
 .awpcp-extra-field-always-visible {
@@ -1265,4 +1213,43 @@ p.ad_status_msg {
   .awpcp-category-dropdown {
     margin-right: 0;
   }
+}
+.awpcp-multiple-region-selector .add-region,
+.awpcp-multiple-region-selector .remove-region {
+  font-size: 0.8em;
+}
+.awpcp-multiple-region-selector .add-region {
+  margin-left: 10px;
+}
+#classiwrapper > ul,
+.awpcp-multiple-region-selector > ul,
+#classiwrapper .awpcp-region-selector-partials,
+.awpcp-multiple-region-selector .awpcp-region-selector-partials {
+  margin: 0;
+  padding: 0;
+}
+#classiwrapper .awpcp-region-selector,
+.awpcp-multiple-region-selector .awpcp-region-selector {
+  background: rgba(0, 0, 0, 0.02);
+  margin-bottom: 5px;
+  padding: 4px 0px;
+}
+#classiwrapper .awpcp-region-selector .awpcp-region-selector-partial,
+.awpcp-multiple-region-selector .awpcp-region-selector .awpcp-region-selector-partial {
+  margin-bottom: 2px;
+}
+#classiwrapper .awpcp-region-selector .awpcp-region-selector-partial label,
+.awpcp-multiple-region-selector .awpcp-region-selector .awpcp-region-selector-partial label {
+  display: block;
+  margin-right: 5px;
+}
+#classiwrapper .awpcp-region-selector .awpcp-region-selector-partial .loading-message,
+.awpcp-multiple-region-selector .awpcp-region-selector .awpcp-region-selector-partial .loading-message {
+  color: #555;
+  font-size: 0.9em;
+  font-style: italic;
+}
+#classiwrapper .awpcp-region-selector:last-of-type,
+.awpcp-multiple-region-selector .awpcp-region-selector:last-of-type {
+  margin-bottom: 0;
 }
