--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -4,6 +4,6 @@
 
 @import 'legacy/frontend.less';
 
-@import 'category-dropdown.less';
-@import 'payment-terms-table.less';
-@import 'multiple-region-selector.less';
+@import 'components/category-dropdown.less';
+@import 'components/main-menu.less';
+@import 'components/multiple-region-selector.less';
