--- a/resources/less/legacy/frontend.less
+++ b/resources/less/legacy/frontend.less
@@ -529,62 +529,12 @@ table.listcatsc tr.special td { border-bottom: 1px solid #ff0000;  }
     padding:0;
 }
 
-#classiwrapper ul li {
-    list-style:none;
-    background-image:none;
-    margin:0;
-    padding:0;
-}
-
-
-#classiwrapper #postsearchads,
-#classiwrapper .awpcp-menu-items {
-    padding:0px 0 15px 0;
-    list-style:none;
-    margin:0;
-}
-
-#postsearchads ul,
-#classiwrapper .awpcp-menu-items ul {
-    margin:0; padding:0; float:left;
-}
-
-#classiwrapper #postsearchads li,
-#classiwrapper .awpcp-menu-items li {
-    list-style:none;
-    float:left;
-    margin:0 15px 10px 0;
-}
-
-#postsearchads .searchcads,
-#classiwrapper .awpcp-menu-items .search-listings {
-    background: transparent url("../images/search_ico.png") no-repeat left center;
-    padding-left:20px;
-}
-
-#postsearchads .edit,
-#classiwrapper .awpcp-menu-items .edit-listing {
-    background: transparent url("../images/edit_ico.png") no-repeat left center;
-    padding-left:20px;
-}
-
-#postsearchads .postad,
-#classiwrapper .awpcp-menu-items .post-listing {
-    background: transparent url("../images/post_ico.png") no-repeat left center;
-    padding-left:20px;
-}
-
-#postsearchads .browse,
-#classiwrapper .awpcp-menu-items .browse-listings {
-    background: transparent url("../images/browse_ico.png") no-repeat left center;
-    padding-left:20px;
-}
-
-#postsearchads .buy-subscriptions,
-#classiwrapper .awpcp-menu-items .buy-subscriptions {
-    background: transparent url("../images/buy_subscription_ico.png") no-repeat left center;
-    padding-left:20px;
-}
+// #classiwrapper ul li {
+//     list-style:none;
+//     background-image:none;
+//     margin:0;
+//     padding:0;
+// }
 
 #classiwrapper form fieldset {
     margin-bottom: 20px;
