--- a/resources/less/components/multiple-region-selector.less
+++ b/resources/less/components/multiple-region-selector.less
@@ -19,10 +19,12 @@
 
     .awpcp-region-selector {
         background: rgba(0, 0, 0, 0.02);
+        list-style-type: none;
         margin-bottom: 5px;
         padding: 4px 0px;
 
         .awpcp-region-selector-partial {
+            list-style-type: none;
             margin-bottom: 2px;
 
             label {
