Fix markup and CSS problems in mobile menu (#715).

--- a/resources/css/awpcpstyle.css
+++ b/resources/css/awpcpstyle.css
@@ -1008,10 +1008,14 @@ p.ad_status_msg {
   color: #eee;
   cursor: pointer;
   display: none;
+  font-size: 1.2em;
+  font-weight: bold;
+  margin: 0;
   padding: 8px 8px 8px 30px;
-  font-size: 1.1em;
+  text-transform: uppercase;
 }
 .awpcp-navigation ul {
+  display: block;
   list-style: none;
   margin: 0;
   padding: 0px 0 15px 0;
@@ -1048,6 +1052,8 @@ p.ad_status_msg {
   .awpcp-navigation .awpcp-nav-menu li {
     margin-bottom: 6px;
     width: 100%;
+    padding: 0 0 0 20px;
+    text-align: left;
   }
   .awpcp-navigation.toggle-on .awpcp-menu-toggle {
     background-image: url("../images/bullet_arrow_up.png");
