--- a/resources/less/components/main-menu.less
+++ b/resources/less/components/main-menu.less
@@ -4,11 +4,15 @@
         color: #eee;
         cursor: pointer;
         display: none;
+        font-size: 1.2em;
+        font-weight: bold;
+        margin: 0;
         padding: 8px 8px 8px 30px;
-        font-size: 1.1em;
+        text-transform: uppercase;
     }
 
     ul {
+        display: block;
         list-style: none;
         margin: 0;
         padding: 0px 0 15px 0;
@@ -55,6 +59,8 @@
             li {
                 margin-bottom: 6px;
                 width: 100%;
+                padding: 0 0 0 20px;
+                text-align: left;
             }
         }
     }
