--- a/resources/css/awpcpstyle.css
+++ b/resources/css/awpcpstyle.css
@@ -1,38 +1,3 @@
-/* AWPCP Mesages */
-.awpcp-message {
-  background-color: #FFFBCC;
-  border: 1px solid #CCC;
-  color: #333;
-  margin: 10px 0;
-  padding: 8px 12px;
-}
-.awpcp-message p,
-.awpcp-page .awpcp-message p {
-  margin: 0;
-}
-.wp-admin .awpcp-page .awpcp-message p {
-  margin: .5em 0;
-}
-.updated {
-  border-color: #E6DB55;
-}
-.error {
-  background-color: #FFEBE8;
-  border-color: #CC0000;
-}
-.info {
-  background-color: #A2C9DB;
-}
-.ghost {
-  display: none;
-}
-.awpcp-error {
-  background-color: #FFEBE8;
-  border-color: #CC0000;
-  color: #ff0000;
-  font-weight: normal;
-  font-size: 14px;
-}
 /* AWPCP Collapsible Handler */
 .js-handler {
   display: block;
@@ -904,6 +869,47 @@ p.ad_status_msg {
 }
 .align-text-right {
   text-align: right;
+}
+.awpcp-message {
+  background-color: #FFFBCC;
+  border: 1px solid #CCC;
+  color: #333;
+  margin: 10px 0;
+  padding: 8px 12px;
+}
+.awpcp-message p {
+  margin: 0;
+}
+.awpcp-page .awpcp-message p {
+  margin: 0;
+}
+.wp-admin .awpcp-message {
+  border-top: none;
+  border-right: none;
+  border-bottom: none;
+}
+.wp-admin .awpcp-message p {
+  margin: .5em 0;
+}
+.updated {
+  border-color: #E6DB55;
+}
+.error {
+  background-color: #FFEBE8;
+  border-color: #CC0000;
+}
+.info {
+  background-color: #A2C9DB;
+}
+.ghost {
+  display: none;
+}
+.awpcp-error {
+  background-color: #FFEBE8;
+  border-color: #CC0000;
+  color: #ff0000;
+  font-weight: normal;
+  font-size: 14px;
 }
 .awpcp-textarea,
 .textareainput {
