--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -1,6 +1,7 @@
 @import 'legacy/frontend.less';
 
 @import 'common.less';
+@import 'messages.less';
 @import 'forms.less';
 @import 'tables.less';
 
