--- a/resources/less/legacy/admin.less
+++ b/resources/less/legacy/admin.less
@@ -350,23 +350,37 @@
 }
 
 
-.awpcp-admin-listings .add {
-    margin-bottom: 10px;
-}
+.awpcp-admin-listings {
+    .add {
+        margin-bottom: 10px;
+    }
 
-.awpcp-admin-listings table .column-title,
-.awpcp-admin-listings table .column-manage {
-    width: 17%;
-}
+    .subsubsub {
+        float: none;
+        margin-top: 5px;
+    }
 
-.awpcp-admin-listings .search-by-box {
-    clear: both;
-    float: right;
-    margin: 5px 10px 0 0;
-}
+    .awpcp-search-container {
+        margin: 5px 0 10px;
 
-.awpcp-admin-listings #classiwrapper {
-    padding: 0;
+        .search-by-box {
+            float: left;
+            margin: 5px 10px 0 0;
+        }
+        .search-box {
+            float: left;
+        }
+    }
+
+    table {
+        .column-title, .column-manage {
+            width: 17%;
+        }
+    }
+
+    #classiwrapper {
+        padding: 0;
+    }
 }
 
 /* Listings - Media Manager */
