--- a/resources/less/legacy/admin.less
+++ b/resources/less/legacy/admin.less
@@ -396,40 +396,90 @@
     margin: 0;
     text-align: center;
     width: 50%;
-}
-.awpcp-media-manager-file-list .jpg,
-.awpcp-media-manager-file-list .png,
-.awpcp-media-manager-file-list .gif {
-    width: 25%;
-}
-.awpcp-media-manager-file-list li .disabled .awpcp-media-manager-file-thumbnail {
-    opacity: 0.5;
-}
 
-.awpcp-media-manager-file-list .awpcp-media-manager-file {
-    background: #F9F9F9;
-    margin: 2px;
-    padding: 10px;
-}
+    &.jpg, &.png, &.gif {
+        width: 25%;
+    }
 
-.awpcp-media-manager-file-list .awpcp-media-manager-file-thumbnail {
-    background: #EEE;
-    margin-bottom: 4px;
-    padding: 5px;
-    min-height: 0;
-}
-.awpcp-media-manager-file-list .jpg .awpcp-media-manager-file-thumbnail,
-.awpcp-media-manager-file-list .png .awpcp-media-manager-file-thumbnail,
-.awpcp-media-manager-file-list .gif .awpcp-media-manager-file-thumbnail {
-    min-height: 129px;
-}
+    .awpcp-media-manager-file {
+        background: #F9F9F9;
+        margin: 2px;
+        padding: 10px;
 
-.awpcp-media-manager-file-list .awcp-media-manager-file-actions {
-    display: block;
-}
-.awpcp-media-manager-file-list .awcp-media-manager-file-action {
-    float: left;
-    margin-right: 2px;
+        .awpcp-media-manager-file-thumbnail {
+            background: #EEE;
+            margin-bottom: 4px;
+            padding: 5px;
+            min-height: 0;
+        }
+    }
+
+    .disabled .awpcp-media-manager-file-thumbnail {
+        opacity: 0.5;
+    }
+
+    .awaiting-approval {
+        background: #FFF6DB;
+    }
+    .rejected {
+        background: #FFB3B3;
+    }
+    .approved {
+        /*background: green;*/
+    }
+
+    .awcp-media-manager-file-actions {
+        background: red;
+
+        li {
+            margin-right: 3px;
+            width: auto;
+
+            a {
+                background: @delete_attachment_icon_url center center no-repeat;
+                display: block;
+                height: 24px;
+                width: 24px;
+
+                &.delete {
+                    background-image: @delete_attachment_icon_url;
+                }
+                &.reject-file {
+                    background-image: @reject_attachment_icon_url;
+                }
+                &.approve-file {
+                    background-image: @approve_attachment_icon_url;
+                }
+                &.rejectpic {
+                    background-image: @disable_attachment_icon_url;
+                }
+                &.approvepic {
+                    background-image: @enable_attachment_icon_url;
+                }
+                &.set-primary-image {
+                    background-image: @primary_image_icon_url;
+                }
+            }
+        }
+    }
+
+    &.jpg, &.png, &.gif {
+        .awpcp-media-manager-file-thumbnail {
+            min-height: 129px;
+        }
+
+        .awcp-media-manager-file-actions {
+            a.delete {
+                background-image: @delete_image_icon_url;
+            }
+            a.approvepic {
+                background-image: @enable_image_icon_url;
+            }
+            a.rejectpic {
+                background-image: @disable_image_icon_url;
+            }
+        }
+    }
 }
 
 
