--- a/resources/less/page-place-ad.less
+++ b/resources/less/page-place-ad.less
@@ -62,7 +62,7 @@
         width: auto;
     }
     li a, li label {
-        background: url(../images/image-enable.png) center center no-repeat;
+        background: @enable_image_icon_url center center no-repeat;
         cursor: pointer;
         display: block;
         height: 22px;
@@ -75,20 +75,20 @@
         display: none;
     }
     .enable a {
-        background-image: url(../images/image-enable.png);
+        background-image: @enable_image_icon_url;
     }
     .disable a {
-        background-image: url(../images/image-disable.png);
+        background-image: @disable_image_icon_url;
     }
     .delete a {
-        background-image: url(../images/image-delete.png);
+        background-image: @delete_image_icon_url;
     }
 
     .primary a, .primary label {
-        background-image: url(../images/image-primary.png);
+        background-image: @primary_image_icon_url;
     }
     .not-primary a, .not-primary label {
-        background-image: url(../images/image-not-primary.png);
+        background-image: @not_primary_image_icon_url;
     }
     .primary input, .not-primary input {
         display: none;
