--- a/resources/less/legacy/admin.less
+++ b/resources/less/legacy/admin.less
@@ -419,13 +419,13 @@
     }
 
     .awaiting-approval {
-        background: #FFF6DB;
+        background: @attachment_awaiting_approval_background;
     }
     .rejected {
-        background: #FFB3B3;
+        background: @attachment_rejected_background;
     }
     .approved {
-        /*background: green;*/
+        // background: @attachment_approved_background;
     }
 
     .awcp-media-manager-file-actions {
