Force categories list to display a single column in mobile devices (#815).

--- a/resources/less/frontend.less
+++ b/resources/less/frontend.less
@@ -8,6 +8,7 @@
 @import 'tables.less';
 
 @import 'components/category-dropdown.less';
+@import 'components/categories-list.less';
 @import 'components/main-menu.less';
 @import 'components/multiple-region-selector.less';
 
