--- a/resources/css/awpcpstyle.css
+++ b/resources/css/awpcpstyle.css
@@ -638,50 +638,6 @@ img.awpcpbrowseadsimg {
 #awpcpcatlayout .awpcpcatlayoutright span {
   font-weight: bold;
 }
-#awpcpcatlayout .showcategoriesmainlist {
-  clear: left;
-  display: block;
-  list-style: none;
-}
-#awpcpcatlayout .showcategoriesmainlist li {
-  float: left;
-  list-style: none;
-  padding: 0;
-  margin: 3px 2% 5px 0px;
-}
-#awpcpcatlayout .showcategoriesmainlist li.columns-1 {
-  width: 100%;
-  margin: 3px 0 5px;
-}
-#awpcpcatlayout .showcategoriesmainlist li.columns-2 {
-  width: 48%;
-}
-#awpcpcatlayout .showcategoriesmainlist li.columns-3 {
-  width: 31%;
-}
-#awpcpcatlayout .showcategoriesmainlist li.columns-4 {
-  width: 23%;
-}
-#awpcpcatlayout .showcategoriesmainlist li.columns-5 {
-  width: 18%;
-}
-#awpcpcatlayout .showcategoriesmainlist li a {
-  text-decoration: none;
-}
-#awpcpcatlayout .showcategoriesmainlist li ul {
-  margin: 0px 0px 20px 10px;
-  list-style: none;
-}
-#awpcpcatlayout .showcategoriesmainlist .showcategoriessublist li {
-  float: none;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  background: none;
-}
-.awpcp-categories-list .top-level-category .js-handler {
-  margin: 4px 10px 0 0;
-}
 #awpcpcatlayout ul.awpcp-region-control-sidelist li {
   float: none;
 }
@@ -1007,6 +963,62 @@ p.ad_status_msg {
 @media only screen and (max-width: 480px) {
   .awpcp-category-dropdown {
     margin-right: 0;
+  }
+}
+#awpcpcatlayout .showcategoriesmainlist {
+  clear: left;
+  display: block;
+  list-style: none;
+}
+#awpcpcatlayout .showcategoriesmainlist li {
+  float: left;
+  list-style: none;
+  padding: 0;
+  margin: 3px 2% 5px 0px;
+}
+#awpcpcatlayout .showcategoriesmainlist li a {
+  text-decoration: none;
+}
+#awpcpcatlayout .showcategoriesmainlist li ul {
+  margin: 0px 0px 20px 10px;
+  list-style: none;
+}
+#awpcpcatlayout .showcategoriesmainlist li.columns-1 {
+  width: 100%;
+  margin: 3px 0 5px;
+}
+#awpcpcatlayout .showcategoriesmainlist li.columns-2 {
+  width: 48%;
+}
+#awpcpcatlayout .showcategoriesmainlist li.columns-3 {
+  width: 31%;
+}
+#awpcpcatlayout .showcategoriesmainlist li.columns-4 {
+  width: 23%;
+}
+#awpcpcatlayout .showcategoriesmainlist li.columns-5 {
+  width: 18%;
+}
+#awpcpcatlayout .showcategoriessublist li {
+  float: none;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  background: none;
+}
+.awpcp-categories-list .top-level-category .js-handler {
+  margin: 4px 10px 0 0;
+}
+@media screen and (max-width: 44em) {
+  #awpcpcatlayout .showcategoriesmainlist {
+    padding: 0;
+  }
+  #awpcpcatlayout .showcategoriesmainlist li.columns-1,
+  #awpcpcatlayout .showcategoriesmainlist li.columns-2,
+  #awpcpcatlayout .showcategoriesmainlist li.columns-3,
+  #awpcpcatlayout .showcategoriesmainlist li.columns-4,
+  #awpcpcatlayout .showcategoriesmainlist li.columns-5 {
+    width: 100%;
   }
 }
 .awpcp-navigation .awpcp-menu-toggle {
